# mini-era

./: CMakeLists.txt  Dockerfile  Dockerfile_data  Makefile  Makefile.targets  README.md  ir.sh  main.c  sim_environs.c  swhw.sh
arch/: clang.sh  gcc.sh  x86.sh
cmake/: ir.cmake  llvm.cmake
cv/CNN_MIO_KERAS/: Dockerfile  mio_dataset.py
fft/: CMakeLists.txt
fft/fft-1d/: CMakeLists.txt
radar/: CMakeLists.txt  Makefile  calculate_dist_from_fmcw.c
viterbi/: CMakeLists.txt  Makefile
