SET (LIB_SRCS
     calculate_dist_from_fmcw.c)

ADD_LIBRARY (radar ${LIB_SRCS})
TARGET_LINK_LIBRARIES (radar fft-1d)

ADD_EXECUTABLE (main main.c)
TARGET_LINK_LIBRARIES (main radar)

ADD_IR_TARGETS ("${LIB_SRCS}" IRTS IRFS)
SET (IR_TARGETS "${IRTS};${IR_TARGETS}" PARENT_SCOPE)
SET (IR_FILES "${IRFS};${IR_FILES}" PARENT_SCOPE)

ADD_FP_TARGETS ("${LIB_SRCS}" FPTS)
SET (FP_TARGETS "${FPTS};${FP_TARGETS}" PARENT_SCOPE)
